Remove `-XX:MaxPermSize` (#2712)
This was removed in JDK 8 and produces a warning